RESOLVED FIXED310811
Fix two overflow bugs in CheckedArithmetic's division operations
https://bugs.webkit.org/show_bug.cgi?id=310811
Summary Fix two overflow bugs in CheckedArithmetic's division operations
Chris Dumez
Reported 2026-03-26 05:58:16 PDT
Fix two overflow bugs in CheckedArithmetic's division operations.
Attachments
Chris Dumez
Comment 1 2026-03-26 06:01:21 PDT
EWS
Comment 2 2026-03-26 16:51:21 PDT
Committed 310033@main (88e8afba6872): <https://commits.webkit.org/310033@main> Reviewed commits have been landed. Closing PR #61413 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-26 16:52:12 PDT
EWS
Comment 4 2026-05-19 11:19:29 PDT
Committed 305877.578@webkitglib/2.52 (fb39ecd0963a): <https://commits.webkit.org/305877.578@webkitglib/2.52> Reviewed commits have been landed. Closing PR #65181 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.