Fix two overflow bugs in CheckedArithmetic's division operations https://bugs.webkit.org/show_bug.cgi?id=310811

Reviewed by Geoffrey Garen.

Test: Tools/TestWebKitAPI/Tests/WTF/CheckedArithmeticOperations.cpp

* Source/WTF/wtf/CheckedArithmetic.h:
(WTF::ArithmeticOperations::divide): For signed types, detect INT_MIN / -1
as overflow instead of executing undefined behavior. On x86, this would
cause SIGFPE; on narrower types it silently wraps to the wrong value.

(WTF::ArithmeticOperations<int, unsigned>::divide): Add an isInBounds
check on the int64_t quotient before casting to ResultType. Without this,
dividing a negative int by an unsigned (e.g. -1 / 1u) silently produces
UINT_MAX instead of signaling overflow.

* Tools/TestWebKitAPI/Tests/WTF/CheckedArithmeticOperations.cpp:
(TestWebKitAPI::TEST(CheckedArithmeticTest, SignedDivisionMinByNegativeOneShouldOverflow)):
(TestWebKitAPI::TEST(CheckedArithmeticTest, MixedSignDivisionShouldOverflowWhenResultIsNegative)):

Canonical link: https://commits.webkit.org/310033@main